--- a/res/layout/fragment_status.xml
+++ b/res/layout/fragment_status.xml
@@ -31,14 +31,14 @@
 	    android:layout_below="@id/tvBalanceExpire" >
 		
 		<ProgressBar
-		    android:id="@+id/progressBarToday"
+		    android:id="@+id/progressBar"
 		    style="?android:attr/progressBarStyleHorizontal"
 		    android:layout_width="350dp"
 		    android:layout_height="350dp"
 		    android:layout_centerInParent="true"
 		    android:indeterminate="false"
 		    android:max="100"
-		    android:progress="50"
+		    android:progress="0"
 		    android:progressDrawable="@drawable/circular_progress_bar"
 		    android:rotation="90" />
 
