--- a/res/menu/main.xml
+++ b/res/menu/main.xml
@@ -23,8 +23,8 @@
         android:showAsAction="never"
         android:title="@string/action_accessibility"/>
     <item
-        android:id="@+id/action_settings"
+        android:id="@+id/action_preferences"
         android:orderInCategory="100"
         android:showAsAction="never"
-        android:title="@string/action_settings"/>
+        android:title="@string/action_preferences"/>
 </menu>
