--- a/res/layout/fragment_dialog_sim.xml
+++ b/res/layout/fragment_dialog_sim.xml
@@ -12,7 +12,7 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:inputType="phone"
-            android:maxLength="10"
+            android:maxLength="13"
             android:ems="10"
             android:hint="@string/number"
             android:singleLine="true" />
@@ -21,6 +21,7 @@
             android:id="@+id/etExpire"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
+            android:inputType="datetime"
             android:layout_below="@id/etNumber"
             android:hint="@string/expire"
             android:singleLine="true" />
@@ -29,6 +30,7 @@
             android:id="@+id/etBalance"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
+            android:inputType="numberDecimal"
             android:layout_below="@+id/etExpire"
             android:hint="@string/balance"
             android:singleLine="true" />
@@ -37,8 +39,8 @@
             android:id="@+id/etBalanceExpire"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
+            android:inputType="datetime"
             android:layout_below="@id/etBalance"
-	        android:inputType="textUri"
             android:hint="@string/balance_expire"
             android:singleLine="true" />
 
