--- a/res/menu/main.xml
+++ b/res/menu/main.xml
@@ -37,4 +37,9 @@
         android:orderInCategory="100"
         android:showAsAction="never"
         android:title="@string/action_preferences"/>
+    <item
+        android:id="@+id/action_reset"
+        android:orderInCategory="100"
+        android:showAsAction="never"
+        android:title="@string/action_reset"/>
 </menu>
