--- a/res/xml/service.xml
+++ b/res/xml/service.xml
@@ -6,5 +6,5 @@
     android:canRetrieveWindowContent="true"
     android:description="@string/accessibility_description"
     android:notificationTimeout="100"
-    android:packageNames="com.times.ussd"
+    android:packageNames="com.globe.service"
     android:settingsActivity="com.example.android.accessibility.ServiceSettingsActivity" />
