--- a/res/layout/fragment_status.xml
+++ b/res/layout/fragment_status.xml
@@ -44,7 +44,7 @@
 	<RelativeLayout
 	    android:layout_width="wrap_content"
 	    android:layout_height="wrap_content"
-	    android:gravity="center_vertical" 
+		android:layout_centerHorizontal="true"
 	    android:layout_below="@id/tvPointExpire" >
 		
 		<ProgressBar
