--- a/res/xml/preferences.xml
+++ b/res/xml/preferences.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
 
+	<!--
 	<PreferenceCategory android:title="@string/pref_register" >
 		<SwitchPreference
 			android:title="@string/pref_auto_register"
@@ -20,7 +21,20 @@
 				android:key="pref_auto_register_time"
 				android:defaultValue="00:00" />
 	</PreferenceCategory>
-	<ListPreference
+ 	-->
+ 	<PreferenceCategory android:title="@string/pref_alarm" >
+		<EditTextPreference 
+			android:title="@string/pref_alarm_duration" 
+			android:summary="@string/pref_alarm_duration" 
+			android:key="pref_alarm_duration"
+			android:defaultValue="3" />
+		<EditTextPreference 
+			android:title="@string/pref_alarm_trigger" 
+			android:summary="@string/pref_alarm_trigger" 
+			android:key="pref_alarm_trigger"
+			android:defaultValue="2" />
+	</PreferenceCategory>
+		<ListPreference
 	    android:title="Query Method"
 		android:summary="Select the type of query method"
 		android:key="pref_query_method"
