--- a/res/menu/main.xml
+++ b/res/menu/main.xml
@@ -3,10 +3,15 @@
     tools:context=".ActivityMain" >
 
     <item
-        android:id="@+id/action_activate_load"
+        android:id="@+id/action_activate_load1"
         android:orderInCategory="100"
         android:showAsAction="never"
-        android:title="@string/action_activate_load"/>
+        android:title="@string/action_activate_load1"/>
+    <item
+        android:id="@+id/action_activate_load2"
+        android:orderInCategory="100"
+        android:showAsAction="never"
+        android:title="@string/action_activate_load2"/>
     <item
         android:id="@+id/action_activate_point"
         android:orderInCategory="100"
