--- a/res/menu/main.xml
+++ b/res/menu/main.xml
@@ -13,10 +13,15 @@
         android:showAsAction="never"
         android:title="@string/action_activate_load2"/>
     <item
-        android:id="@+id/action_activate_point"
+        android:id="@+id/action_activate_point1"
         android:orderInCategory="100"
         android:showAsAction="never"
-        android:title="@string/action_activate_point"/>
+        android:title="@string/action_activate_point1"/>
+    <item
+        android:id="@+id/action_activate_point2"
+        android:orderInCategory="100"
+        android:showAsAction="never"
+        android:title="@string/action_activate_point2"/>
     <item
         android:id="@+id/action_accessibility"
         android:orderInCategory="100"
