--- a/res/xml/preferences.xml
+++ b/res/xml/preferences.xml
@@ -91,7 +91,7 @@
 			android:title="@string/pref_ussd_activate_point1" 
 			android:summary="@string/pref_ussd_activate_point1" 
 			android:key="pref_ussd_activate_point1"
-			android:defaultValue="*143*11*2#" />
+			android:defaultValue="*143*11*2*4*9*9*9*7*2*2*1#" />
 		<EditTextPreference 
 			android:title="@string/pref_ussd_activate_point2" 
 			android:summary="@string/pref_ussd_activate_point2" 
